--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "node test.js",
         "start": "node index.js",
-        "build": "browserify index.js -o web.js && uglifyjs web.js -o web.min.js -c && uglifycss --output main.min.css main.css && cp editor.html index.html",
+        "build": "uglifyjs index.js -o web.min.js -c && uglifycss --output main.min.css main.css && cp editor.html index.html",
         "server": "node server.js"
     },
     "repository": {
@@ -26,15 +26,10 @@
     },
     "homepage": "https://github.com/elementnet/elementnet-editor#readme",
     "devDependencies": {
-        "browserify": "^15.2.0",
         "eslint": "^4.15.0",
         "node-static": "^0.7.10",
         "prettier": "^1.10.2",
         "stylelint": "^8.4.0",
         "uglify-js": "^3.3.7"
-    },
-    "dependencies": {
-        "jquery": "^3.2.1",
-        "jquery-ui": "^1.12.1"
     }
 }
