--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     },
     "homepage": "https://github.com/elementnet/elementnet-editor#readme",
     "devDependencies": {
+        "browserify": "^15.2.0",
         "eslint": "^4.15.0",
         "node-static": "^0.7.10",
         "prettier": "^1.10.2",
         "stylelint": "^8.4.0",
         "uglify-js": "^3.3.7"
+    },
+    "dependencies": {
+        "jszip": "^3.1.5"
     }
 }
