--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "player"]
     path = player
-    url = git@github.com:elementnet/elementnet-player.git
+    url = https://github.com/elementnet/elementnet-player.git
