--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "A block-based HTML, CSS, and JS editor",
     "main": "index.js",
     "engines": {
-        "node": ">=4",
-        "npm": ">=5"
+        "node": "9.3.0",
+        "npm": "5.5.1"
     },
     "scripts": {
         "test": "node test.js",
