--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "test": "node test.js",
         "start": "node index.js",
-        "post-install": "uglifyjs index.js -o web.min.js -c && uglifycss --output main.min.css main.css && cp editor.html index.html",
+        "postinstall": "uglifyjs index.js -o web.min.js -c && uglifycss --output main.min.css main.css && cp editor.html index.html && echo Building Completed",
         "server": "node server.js"
     },
     "repository": {
