--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
-before_install: nvm install node
+before_install: 
+  - nvm install node
+  - npm install -g browserify
+  - npm install -g uglifycss
+  - npm install -g uglifyjs
 install: npm install
 script: true
 deploy:
