--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ before_install:
   - nvm install node
   - npm install -g browserify
   - npm install -g uglifycss
-  - npm install -g uglifyjs
+  - npm install -g uglify-js
 install: npm install
+after_install: cp build/* ./
 script: true
 deploy:
   provider: pages
