--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "scripts": {
         "test": "node test.js",
         "start": "node server.js",
-        "postinstall":
-            "uglifyjs app/modals/editorModal.js app/controllers/editorController.js -o build/web.min.js -c && uglifycss --output build/main.min.css app/views/editorStyle.css && cp app/views/editorView.html build/index.html",
+        "postinstall": "uglifyjs app/modals/editorModal.js app/controllers/editorController.js -o build/web.min.js -c && uglifycss --output build/main.min.css app/views/editorStyle.css && cp app/views/editorView.html build/index.html",
         "rebuild": "npm run postinstall"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/elementnet/elementnet-editor.git"
     },
-    "keywords": ["html", "css", "js", "block"],
+    "keywords": [
+        "html",
+        "css",
+        "js",
+        "block"
+    ],
     "author": "ElementNetwork",
     "license": "Apache-2.0",
     "bugs": {
@@ -30,6 +34,7 @@
         "eslint": "^4.15.0",
         "node-static": "^0.7.10",
         "prettier": "^1.10.2",
+        "prettier-eslint": "^8.8.1",
         "stylelint": "^8.4.0",
         "uglify-js": "^3.3.7"
     },
