--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_install: 
   - npm install -g browserify
   - npm install -g uglifycss
-  - npm install -g uglify-js
+  - npm install -g uglify-es
 install: npm install
 after_install: cp -R build/ ./
 script: true
