--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - npm install -g uglifycss
   - npm install -g uglify-js
 install: npm install
-after_install: mv build/* ./
+before_script: cp -a build/. ./
 script: true
 deploy:
   provider: pages
